--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "file-saver": "^1.3.8",
+    "mongoose": "^5.2.7",
+    "npm": "^6.3.0",
+    "parse-server": "^2.8.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
